# dev-upload-server

./: README.md  dev_upload_server.py  pyproject.toml  requirements.py  setup.py
src/: __init__.py  __main__.py  dev_upload_server.py
src/dev_upload_server/: __init__.py  __main__.py
